Wave animation added

--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
 
                     <!-- Big Introduction Header. -->
                     <h1 class="about-me__info--title h1">
-                        <span class="myPreference">Frederick Thomas</span><sup class="sup3">👋🏿</sup>
+                        Hi, I'm<span class="myPreference">Frederick Thomas</span>
+
+                        <!-- Be kind and wave "Hello." -->
+                        <sup class="sayHello" style="font-size: large;">
+                            👋🏿
+                        </sup>
                     </h1>
 
 
