--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
                         link__hover-effect--black" style="margin-right: 20px;">
                         Tech Stack
                     </a>
+                </li>
 
 
+                <li>
                     <!--Anchor link for  "Projects". -->
                     <a href="#projectSection" class="
                         navEffect 
@@ -64,8 +66,10 @@
                         link__hover-effect--black">
                         Projects
                     </a>
+                </li>
 
 
+                <li>
                     <!--Anchor link for  Contact. NOTE: THIS IS STYLE DIFFERRENTLY (because it's a primary call to action button). -->
                     <a href="" class="
                     nav__link--anchor
@@ -608,7 +612,7 @@
         <div class="container">
             <div class="row">
             
-                <h1>
+                <h1 style="padding-bottom: 16px;">
                     <i>Hover over & Explore my<span class="pj">Projects</span><span style="color: #6030b1; font-size: 32px;">!</i></span>
                 </h1>
 
@@ -645,8 +649,8 @@
                                 </h4>
 
 
-                                <p class="project__passage">
-                                    My First GitHub Repository (worth the look): In every Developer's & Engineer's life, "Hello, World" is as special as a baby's first step- perhaps, not everyone is able to walk; but anyone can code: they just have to have stick-to-it-ness - GRIT! These were my first steps: "Hello, World!!!"
+                                <p class="project__passage" style="font-size: 22px;">
+                                    My First GitHub Repository (worth the look): In every Developer's & Engineer's life, "Hello, World" is as special as a baby's first step- perhaps, not everyone is able to walk; but anyone can code: they just have to have stick-to-it-ness - GRIT! These were my first steps: "HELLO, WORLD!!!"
                                 </p>
 
 
@@ -700,7 +704,7 @@
                                     project__sub-title 
                                     second">
                                     <!-- Ref. for HTML code for info icon (instead of paying to use the same icon from fontawesome.com) https://stackoverflow.com/questions/33878539/is-there-an-html-entity-for-an-info-icon -->
-                                    <span class="technolgies">
+                                    <span class="technolgies" style="color: white;">
                                         <sup class="
                                             info 
                                             glow">
@@ -710,7 +714,7 @@
                                 </h4>
 
 
-                                <p class="project__passage">
+                                <p class="project__passage" style="font-size: 22px;">
                                     My First Team Project (worth the look): Shortly after I made my first GitHub repository, I soon found myself coding a game (mostly designed out of JavaScript) with a diverse and energized team!"
                                 </p>
 
@@ -765,7 +769,7 @@
                                     project__sub-title 
                                     third">
                                     <!-- Ref. for HTML code for info icon (instead of paying to use the same icon from fontawesome.com) https://stackoverflow.com/questions/33878539/is-there-an-html-entity-for-an-info-icon -->
-                                    <span class="technolgies">
+                                    <span class="technolgies" style="color: white;">
                                         <sup class="
                                             info 
                                             glow">
@@ -846,7 +850,7 @@
                                     project__sub-title 
                                     fourth">
                                     <!-- Ref. for HTML code for info icon (instead of paying to use the same icon from fontawesome.com) https://stackoverflow.com/questions/33878539/is-there-an-html-entity-for-an-info-icon -->
-                                    <span class="technolgies">
+                                    <span class="technolgies" style="color: white;">
                                         <sup class="
                                             info 
                                             glow">
@@ -856,7 +860,7 @@
                                 </h4>
 
 
-                                <p class="project__passage" style="font-weight: 500; font-size: 24px;">
+                                <p class="project__passage" style="font-weight: 700; font-size: 24px;">
                                     My First GitHub AI Chatbot (worth the look): It's one thing to use API's, and make an AWesome Search Engine, but it's another thing to Create Articficial Intelligence that Thinks Like A Human!"
                                 </p>
 
@@ -911,7 +915,7 @@
                                     project__sub-title 
                                     fifth">
                                     <!-- Ref. for HTML code for info icon (instead of paying to use the same icon from fontawesome.com) https://stackoverflow.com/questions/33878539/is-there-an-html-entity-for-an-info-icon -->
-                                    <span class="technolgies">
+                                    <span class="technolgies" style="color: white;">
                                         <sup class="
                                             info 
                                             glow">
@@ -921,7 +925,7 @@
                                 </h4>
 
 
-                                <p class="project__passage">
+                                <p class="project__passage" style="font-size: 24px;">
                                     You have to view this project (over&nbsp;<span style="font-weight: 900; font-size: x-large;">3,100 views</span>)!&nbsp;&nbsp;<span style="font-weight: 900; font-size: x-large;">Watch Me</span>&nbsp;create an AWESOME README Generator (and the video and music at the end is slamm'N #justSayN).
                                 </p>
 
@@ -985,7 +989,7 @@
                                 </h4>
 
 
-                                <p class="project__passage">
+                                <p class="project__passage" style="font-size: 24px;">
                                     An application that can be used to write, save, and delete notes. This application will use an express backend and save and retrieve note data from a JSON file.
                                 </p>
 
@@ -1045,7 +1049,7 @@
                                 </h4>
 
 
-                                <p class="project__passage">
+                                <p class="project__passage" style="font-size: 24px; font-weight: 700;">
                                     Developers are often tasked with creating interfaces that make it easy for non-developers to view and even interact with information, stored in databases. Often, these interfaces are known as Content Management Systems (CMS). This is an architect and built solution for managing a company's employees (using node, inquirer, and MySQL).  This project includes Node.js, MySQL, and Inquirer!
                                 </p>
 
@@ -1096,7 +1100,7 @@
                                     project__sub-title 
                                     eighth">
                                     <!-- Ref. for HTML code for info icon (instead of paying to use the same icon from fontawesome.com) https://stackoverflow.com/questions/33878539/is-there-an-html-entity-for-an-info-icon -->
-                                    <span class="technolgies">
+                                    <span class="technolgies" style="color: white;">
                                         <sup class="
                                             info 
                                             glow">
@@ -1173,7 +1177,7 @@
                                     project__sub-title 
                                     ninth">
                                     <!-- Ref. for HTML code for info icon (instead of paying to use the same icon from fontawesome.com) https://stackoverflow.com/questions/33878539/is-there-an-html-entity-for-an-info-icon -->
-                                    <span class="technolgies">
+                                    <span class="technolgies" style="color: white;">
                                         <sup class="
                                             info 
                                             glow">
@@ -1183,8 +1187,8 @@
                                 </h4>
 
 
-                                <p class="project__passage">
-                                    My First time using <span style="font-weight: 900; font-size: 32px;">TypeScript </span>&nbsp;(over&nbsp;<span style="font-weight: 900; font-size: 24px;"> 90%</span>&nbsp;of the project).  I learned the basics within <span style="font-weight: 900; font-size: 24px;">2 Weeks</span>! Joia is your jewel eCommerce website for local art, where you can find your gem for your Jewel or Jim!
+                                <p class="project__passage" style="font-size: 24px;">
+                                    My First time using <span style="font-weight: 900; font-size: 32px;">TypeScript </span>&nbsp;(over&nbsp;<span style="font-weight: 900; font-size: 26px;"> 90%</span>&nbsp;of the project).  I learned the basics within <span style="font-weight: 900; font-size: 26px;">2 Weeks</span>! Joia is your jewel eCommerce website for local art, where you can find your gem for your Jewel or Jim!
                                 </p>
 
 
