Ditching Bootstrap. Ref. https://threkk.medium.com/how-to-make-a-css-only-hamburger-menu-f7ad41e13399

--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Favicon. -->
-    <link rel="icon" type="image/x-icon" href="./assets/logoNfavicon/use4favicon.jpeg" />
-
-
-    <!-- How do I incorporate Bootstrap without it overiding my CSS/How do I overide certain Bootstrap styles? -->
-    <!-- Bootstrap framework for building responsive, mobile-first sites, with jsDelivr. -->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="./assets/logoNfavicon/use4favicon.jpeg"/>
 
 
     <!-- Used for Font & Icons. -->
@@ -52,10 +47,7 @@
             <!-- Hamburger Menu Ref. Andrey Krokhin (https://codepen.io/andreykrokhin) -->
              <!-- Bootstrap reference (https://getbootstrap.com/docs/4.1/utilities/display/#hiding-elements). -->
             <div class="hamburger-menu">
-                <input id="menu__toggle" class="
-                    d-none
-                    d-sm-block 
-                    d-lg-none" type="checkbox" />
+                <input id="menu__toggle" type="checkbox"/>
                 
                 
                 <label class="menu__btn" for="menu__toggle">
