--- a/index.html
+++ b/index.html
@@ -822,12 +822,16 @@
                                 </h4>
 
 
-                                <p class="project__passage" style="font-weight: 700; font-size: 20px;">
-                                    A Double Wammy API Project! NASA Image Search Engine is a responsive web app that displays images and information about space, stars and planets. The user enters a desired word and when the search button is pressed results appear using two NASA API's and one Wikipedia API. A picture of the day will also appear in a side card, whatever picture is shown was taken on the same date as today (with the exception of the year).
+                                <p class="project__passage" style="font-weight: 700; font-size: 18px;">
+                                    These Search Engines are a responsive web app that displays images and information about space, stars and planets. The user enters a desired word, and when the search button is pressed results appear using two NASA API's and one Wikipedia API.
+                                </p>
+                                    
+                                    
+                                <p class="project__passage" style="font-weight: 700; font-size: 18px;">A picture of the day will also appear in a side card, whatever picture is shown was taken on the same date as today (with the exception of the year).
                                 </p>
 
 
-                                <p class="project__passage" style="font-weight: 700; font-size: 20px;">
+                                <p class="project__passage" style="font-weight: 700; font-size: 18px;">
                                     Users can then hover over their result images and click one of the heart buttons to add it to a list of favorite images. This is connected to local storage and will be saved even if the user refreshes.
                                 </p>
 
