Working on @media 320 x 800: background after toggle is selected.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Super Coding Ninja™</title>
 
     <!-- Stylesheet. -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
 
     <!-- Favicon. -->
     <link rel="icon" type="image/x-icon" href="./assets/logoNfavicon/logo.jpeg"/>
@@ -25,7 +25,7 @@
 
 
 <body>
-    <!--HTML Currency Symbols, Currency Entities and ASCII Currency Character Code Reference https://www.toptal.com/designers/htmlarrows/symbols/ -->>
+    <!--HTML Currency Symbols, Currency Entities and ASCII Currency Character Code Reference https://www.toptal.com/designers/htmlarrows/symbols/ -->
     
     <!-- Use of underscores and hyphens in the name scheme are due to applying the BEM method. Reference https://getbem.com/ "BEM — is a methodology that helps you to create reusable components and code sharing in front‑end development" -->
    <!--========== About Me Secton. ==========-->
