--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 
 
                     <!-- Big Introduction Header. -->
-                    <h1 class="about-me__info--title h1">
+                    <h1 class="about-me__info--title">
                         Hi, I'm<span class="myPreference">Frederick Thomas</span>
 
                         <!-- Be kind and wave "Hello." -->
-                        <sup class="sayHello" style="font-size: 24px;">
+                        <sup class="sayHello">
                             👋🏿
                         </sup>
                     </h1>
@@ -322,7 +322,7 @@
                         <!-- Shows My Tech. Icon. -->  
                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg" class="
                             tech__img 
-                            expess" alt="express"/>
+                            express" alt="express"/>
                     </figure>
 
 
