Get rid of the checkbox's view (for menu toggle button on smaller screens).

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 
                     <!-- About Me Paragraph. -->
-                    <p class="about-me__info--passage" style="color: #6030b1;">
+                    <p class="about-me__info--passage">
                         I'm a <strong class="emph">Developer & Engineer</strong> who solves problems people don't know exist.&nbsp;&nbsp;Solving problems can be difficult, but so is failing:&nbsp;<u><b>Choose</b></u>&nbsp;Your Hard!&nbsp;&nbsp;I choose to&nbsp;&nbsp;<strong class="emph">Learn</strong>,&nbsp;<strong class="emph">Teach</strong>, and&nbsp;<strong class="emph">Replicate</strong>, Ensuring Generational&nbsp;<strong class="emph2">SUCCESS</strong>.
                     </p>
                 </div>
