--- a/index.html
+++ b/index.html
@@ -614,8 +614,8 @@
 
                         <!-- Shows My Tech. Icon. -->  
                         <img src="./assets/techStack/VanillaJS.webp"
-                        class="tech__img" alt="Vanilla JavaScript" style="width: 50px;
-                        height: 50px; border-radius: 50%; overflow: hidden;"/>
+                        class="tech__img" alt="Vanilla JavaScript" style="width: 3.125;
+                        height: 3.125; border-radius: 50%; overflow: hidden;"/>
                     </figure>
                     
 
