--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                                 </h4>
 
 
-                                <p class="project__passage" style="font-size: 22px;">
+                                <p class="project__passage">
                                     My First Team Project (worth the look): Shortly after I made my first GitHub repository, I soon found myself coding a game (mostly designed out of JavaScript) with a diverse and energized team!"
                                 </p>
 
@@ -1123,7 +1123,7 @@
                                 </h4>
 
 
-                                <p class="project__passage" style="font-size: 24px; font-weight: 700;">
+                                <p class="project__passage">
                                     Developers are often tasked with creating interfaces that make it easy for non-developers to view and even interact with information, stored in databases. Often, these interfaces are known as Content Management Systems (CMS). This is an architect and built solution for managing a company's employees (using node, inquirer, and MySQL).  This project includes Node.js, MySQL, and Inquirer!
                                 </p>
 
