--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
                             <!-- 👇🏿 This Class Is For The Project's Title & TECHNOLOGY Description- Remember! 👇🏿 -->
                             <div class="project__description">
                                 <!--👇🏿 My Awesome Project's Title Goes Here.👇🏿 -->
-                                <h3 class="project__title" style="font-size: 30px;">
+                                <h3 class="project__title"">
                                     NASA Search Engine & NASAquery!
                                 </h3>
                         
