@media query 800px Template

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
+    
+    <!-- This tag is crucial for mobile-first web design, ensuring that the page scales correctly on different screen sizes. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Super Coding Ninja™</title>
