--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
     <section id="about-me">
         <!-- Navigation Menu. -->
         <nav>
-            <!-- Personal Logo. -->
+            <!-- Personal Logo. Class "III" is in both parts of name: in order to make it easier for the page visitor when hovering. -->
             <div class="BIG">
-                <i>Frederick
+                <i style="cursor: pointer;">Frederick
+                    <!-- Class "glow" is intended to attract the page visitor to hover over my name. -->
                     <sup class="
                         III 
-                        sup2">
+                        sup2" style="background: linear-gradient(to right, rgb(255, 204, 0), #ff6200, white, orange, rgb(255, 165, 0), #ff6200, white, orange, rgb(255, 204, 0), #ff6200, white, orange);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent; font-weight: 900;">
                         III
                     </sup>
                 </i>
