--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <!-- Class "glow" is intended to attract the page visitor to hover over my name. -->
                     <sup class="
                         III 
-                        sup2" style="background: linear-gradient(to right, rgb(255, 204, 0), #ff6200, white, orange, rgb(255, 165, 0), #ff6200, white, orange, rgb(255, 204, 0), #ff6200, white, orange);
+                        sup2" style="background: linear-gradient(to right, rgb(255, 204, 0), blue, #ff6200, white, orange, rgb(255, 165, 0), blue, #ff6200, white, orange, rgb(255, 204, 0), blue, #ff6200, white, orange);
                         -webkit-background-clip: text;
                         -webkit-text-fill-color: transparent; font-weight: 900;">
                         III
