@media query max-width 320px revised

--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@
                 <span class="footer__logo--popper">
                     Top&nbsp;
                     
-                    <span style="font-weight: 400; font-size: larger;" class="glow3">
+                    <span class="glow3">
                         &#x21ee;
                     </span>
                 </span>
