Certain elements are not rsponding appropiately as before for certain projects in project__passage--medium & project__passage--light

--- a/index.html
+++ b/index.html
@@ -837,7 +837,6 @@
                                     
                                     <span class="technolgies">
                                         <sup class="
-                                            shine
                                             info 
                                             glow">
                                             &#9432;
@@ -939,7 +938,7 @@
                             <img src="./assets/img/AIproj.png" class="project__img" alt="My First GitHub Repository">
                         
                             <!-- 👇🏿 This Class Is For The Project's Title & TECHNOLOGY Description- Remember! 👇🏿 -->
-                            <div class="project__description">
+                            <div class="project__description" style="display: block;">
                                 <!--👇🏿 My Awesome Project's Title Goes Here.👇🏿 -->
                                 <h3 class="project__title">
                                     AI Chatbot
@@ -967,7 +966,7 @@
                                 <div class="project__links">
                                     <p>
                                         <!-- 👇🏿 https://www.github.com/WhatEverRepoIpickThatIhaveDoneGoesHere 👇🏿 -->
-                                        <a href="https://github.com/supercodingninja/myFirstAIchatBot" target="_blank" style="text-decoration: none;">
+                                        <a href="https://github.com/supercodingninja/myFirstAIchatBot" target="_blank" style="text-decoration: none; display: inline-block;">
                                             <i class="
                                                 fa-brands 
                                                 fa-github 
@@ -978,7 +977,7 @@
 
 
                                         <!-- 👇🏿 Deployed Application Goes Here (VITAL). 👇🏿 -->
-                                        <a href="https://youtu.be/J0C0YLrUmLE?feature=shared" target="_blank">
+                                        <a href="https://youtu.be/J0C0YLrUmLE?feature=shared" target="_blank" style="text-decoration: none; display: inline-block;">
                                             <!-- 👇🏿 Use Your Own Font Class From https://fontawesome.com/ Here. 👇🏿 -->
                                             <i class="
                                                 fa-solid 
@@ -1022,7 +1021,7 @@
                                 </h4>
 
 
-                                <p class="project__passage">
+                                <p class="project__passage--medium">
                                     You have to view this project (over 3,100 views)!  Watch Me create an AWESOME README Generator (and the video and music at the end is slamm'N #justSayN).
                                 </p>
 
@@ -1202,7 +1201,7 @@
 
 
                                 <p class="project__passage--light">
-                                    An On/Offline budgeting application, to help you keep track of your personal finance! I utilize IndexedDB, cache API, and Service Workers, to help provide an offline experience for the application.
+                                    A budgeting application that helps you keep track of your personal finances On & Offline(IndexedDB, cache API, and Service Workers enables this experience).
                                 </p>
 
 
@@ -1339,7 +1338,7 @@
                                 </h4>
 
 
-                                <p class="project__passage">
+                                <p class="project__passage--medium">
                                     A portfolio can land you a part-time position; or even a full-time career!  If you you create an effective portfolio, you'll soon discover that you highlighted your best projects (including your thought process behind it: don't just commit git).  Learn how to create a basic portfolio, with this repository.
                                 </p>
 
