Taking another approach.  Tome to go to church!

--- a/index.html
+++ b/index.html
@@ -719,7 +719,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--dark">
+                                <p class="
+                                    project__passage 
+                                    project__passage--dark">
                                     My First GitHub Repository (worth the look): In every Developer's & Engineer's life, "Hello, World" is as special as a baby's first step- perhaps, not everyone is able to walk; but anyone can code: they just have to have stick-to-it-ness - GRIT! These were my first steps: "HELLO, WORLD!!!"
                                 </p>
 
@@ -782,7 +784,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--medium">
+                                <p class="
+                                        project__passage 
+                                        project__passage--medium">
                                     My First Team Project (worth the look): Shortly after I made my first GitHub repository, I soon found myself coding a game (mostly designed out of JavaScript) with a diverse and energized team!"
                                 </p>
 
@@ -844,7 +848,9 @@
                                     </span>
                                 </h4>
 
-                                <p class="project__passage--medium__heavy">
+                                <p class="
+                                    project__passage 
+                                    project__passage--special">
                                     Explore The Universe With These Search Engines!  These Search Engines are a responsive web app that displays images and information about space, stars and planets. The user enters a desired word, and when the search button is pressed results appear using two NASA API's and one Wikipedia API. Hover the icons for detailed information.
                                 </p>
 
@@ -958,7 +964,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--light">
+                                <p class="
+                                    project__passage 
+                                    project__passage--light">
                                     My First GitHub AI Chatbot (worth the look): It's one thing to use API's, and make an AWesome Search Engine, but it's another thing to Create Articficial Intelligence that Thinks Like A Human!"
                                 </p>
 
@@ -1021,7 +1029,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--medium">
+                                <p class="
+                                    project__passage 
+                                    project__passage--medium">
                                     You have to view this project (over 3,100 views)!  Watch Me create an AWESOME README Generator (and the video and music at the end is slamm'N #justSayN).
                                 </p>
 
@@ -1083,7 +1093,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--dark">
+                                <p class="
+                                    project__passage 
+                                    project__passage--dark">
                                     An application that can be used to write, save, and delete notes. This application will use an express backend and save and retrieve note data from a JSON file.
                                 </p>
 
@@ -1141,7 +1153,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--dark">
+                                <p class="
+                                    project__passage 
+                                    project__passage--dark">
                                     Developers are often tasked with creating interfaces that make it easy for non-developers to view and even interact with information, stored in databases. Often, these interfaces are known as Content Management Systems (CMS). This is an architect and built solution for managing a company's employees (using node, inquirer, and MySQL).  This project includes Node.js, MySQL, and Inquirer!
                                 </p>
 
@@ -1200,7 +1214,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--light">
+                                <p class="
+                                    project__passage 
+                                    project__passage--light">
                                     A budgeting application that helps you keep track of your personal finances On & Offline(IndexedDB, cache API, and Service Workers enables this experience).
                                 </p>
 
@@ -1275,7 +1291,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--light">
+                                <p class="
+                                    project__passage 
+                                    project__passage--light">
                                     My First time using TypeScript (over 90% of the project).  I learned the basics within 2 Weeks! Joia is your jewel eCommerce website for local art, where you can find your gem for your Jewel or Jim!
                                 </p>
 
@@ -1338,7 +1356,9 @@
                                 </h4>
 
 
-                                <p class="project__passage--medium">
+                                <p class="
+                                    project__passage 
+                                    project__passage--medium">
                                     A portfolio can land you a part-time position; or even a full-time career!  If you you create an effective portfolio, you'll soon discover that you highlighted your best projects (including your thought process behind it: don't just commit git).  Learn how to create a basic portfolio, with this repository.
                                 </p>
 
