Color scheme changed to enable better readability.

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             Adobe&nbsp;Creative&nbsp;Cloud
                         </span>
                     </div>
@@ -316,7 +316,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             CSS3
                         </span>
                     </div>
@@ -335,7 +335,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             ES6&nbsp;JavaScript
                         </span>
                     </div>
@@ -355,7 +355,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy" style="transform: scale(-1, 3);">
+                            alt2groovy" style="transform: scale(-1, 3);">
                             express
                         </span>
                     </div>
@@ -394,7 +394,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             heroku
                         </span>
                     </div>
@@ -413,7 +413,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             HTML5
                         </span>
                     </div>
@@ -452,7 +452,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             mongoDB
                         </span>
                     </div>
@@ -509,7 +509,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             Node&nbsp;Package&nbsp;Manager
                         </span>
                     </div>
@@ -529,7 +529,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             Postman
                         </span>
                     </div>
@@ -549,7 +549,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             Python
                         </span>
                     </div>
@@ -568,7 +568,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             React
                         </span>
                     </div>
@@ -587,7 +587,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             Saas & SCSS
                         </span>
                     </div>
@@ -626,7 +626,7 @@
                         <!-- Shows My Tech.'s' Title. -->
                         <span class="
                             tech__name 
-                            groovy">
+                            alt2groovy">
                             TypeScript
                         </span>
                     </div>
