Logis, Markup, and Styles successfully accomplished, aided by Attr. Ref. https://www.gosquared.com/blog/visitors-currently-on-this-page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <!-- Use of underscores and hyphens in the name scheme are due to applying the BEM method. Reference https://getbem.com/ "BEM — is a methodology that helps you to create reusable components and code sharing in front‑end development" -->
    <!--========== About Me Secton. ==========-->
     <section id="about-me">
+        <!-- Displays Page's Visitations.  Attr. https://www.gosquared.com/blog/visitors-currently-on-this-page -->
+        <p id="online-now"><span class="visitors">0</span> people are currently viewing this page.</p>
+
         <!-- Navigation Menu. -->
         <nav>
             <!-- Personal Logo. Class "III" is in both parts of name: in order to make it easier for the page visitor when hovering. -->
