Attempt to calculating page visits.

--- a/index.html
+++ b/index.html
@@ -1586,10 +1586,10 @@
         // HOW TO SHOW OTHER USERS HOW MANY TIMES MY PAGE HAS BEEN VISITED. //
         var url = window.location.href;
         
-        $.getJSON('https://api.gosquared.com/now/v3/pages?api_key=demo&site_token=GSN-106863-S&href=' + encodeURIComponent(url), function(data) {
+        $.getJSON('https://scn.ninja/' + encodeURIComponent(url), function(data) {
     
-    $('#online-now').addClass('visible').find('.visitors').text(data.visitors);
-});
+        $('#online-now').addClass('visible').find('.visitors').text(data.visitors);
+        });
     </script>
 </body>
 
